# exa

./: .gitignore  CHANGES.md  CONTRIBUTE.md  Cargo.toml  README.md  firedbg.toml
.github/workflows/: packager.yaml  scheduled-build.yaml  test.yaml
data/: scene.rgs
data/dialog/conversations/: testconversation.ron
data/dialog/speakers/: testspeaker.ron
data/images/: checkerboard.pxo
data/languages/: en-us.ftl
data/maps/: test.rgs
data/ui/: exa.pxo
editor/: Cargo.toml
editor/src/: main.rs
executor/: Cargo.toml
executor-android/: Cargo.toml
executor-android/src/: lib.rs
executor-wasm/: Cargo.toml
executor-wasm/src/: lib.rs
executor/src/: cmd.rs  main.rs
game/: Cargo.toml
game/src/: eventline.rs  lib.rs  messenger.rs  settings.rs  tracy.rs  utilities.rs
game/src/components/: fluent.rs  fonts.rs  mod.rs
game/src/components/dialog/: conversation.rs  error.rs  mod.rs  speaker.rs  ui.rs
game/src/languages/: en_us.rs  mod.rs
game/src/player/: health.rs  mod.rs  perspective.rs  skybox.rs
game/src/settings/: input.rs  mod.rs
game/src/ui/: coremenu.rs  developer.rs  mod.rs
