
[workspace]
members = ["editor", "executor", "game"]
# members = ["editor", "executor", "executor-wasm", "executor-android", "game"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.3.0"
authors = ["Lily Ana Valley <mslilyvalley@icloud.com>"]
description = "An experimental videogame."
repository = "https://github.com/lilyanavalley/exa"
license = "GPL-3.0"
readme = "README.md"

[workspace.dependencies.fyrox]
version = "0.34.0"
[workspace.dependencies.fyroxed_base]
version = "0.21.0"

# Optimize the engine in debug builds, but leave project's code non-optimized.
# By using this technique, you can still debug you code, but engine will be fully
# optimized and debug builds won't be terribly slow. With this option, you can
# compile your game in debug mode, which is much faster (at least x3), than release.
[profile.dev.package."*"]
opt-level = 3
