
[workspace]
members = ["editor", "executor", "game"]
# members = ["editor", "executor", "executor-wasm", "executor-android", "game"]
resolver = "2"

[workspace.dependencies.fyrox]
version = "0.34.0"
[workspace.dependencies.fyroxed_base]
version = "0.21.0"

[profile.release]
debug = true


# Optimize the engine in debug builds, but leave project's code non-optimized.
# By using this technique, you can still debug you code, but engine will be fully
# optimized and debug builds won't be terribly slow. With this option, you can
# compile your game in debug mode, which is much faster (at least x3), than release.
[profile.dev.package."*"]
opt-level = 3
