
[package]
name = "editor"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
fyrox = {workspace = true}
fyroxed_base = {workspace = true}
game = { path = "../game" }
strum = "0.26.3"
strum_macros = "0.26.3"
