
[package]
name = "executor-android"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lilyanavalley/exa"
license = "GPL-3.0-or-later"

[package.metadata.android]
assets = "../data"
strip = "strip"

[lib]
crate-type = ["cdylib"]

[dependencies]
fyrox = { workspace = true }
game = { path = "../game" }
