
[package]
name = "executor-android"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[package.metadata.android]
assets = "../data"
strip = "strip"

[lib]
crate-type = ["cdylib"]

[dependencies]
fyrox = { workspace = true }
game = { path = "../game" }
