
[package]
name = "executor-wasm"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fyrox = {workspace = true}
game = { path = "../game" }
