
[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox               = {workspace = true} # Game engine.
firedbg-lib         = "0.1.2"   # On-the-fly debugging for games and async.
tracing             = "0.1.40"  # App tracing and profiling.
tracy-client        = "0.17"
tracy-client-sys    = "0.22"
ring                = "0.17.8"  # Cryptographic operations.
chrono              = "0.4.38"  # Time-keeping.
fluent-bundle       = "0.15.3"  # Localization and translations layer.
